--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "team-profile-generator",
+  "name": "employee-tracker",
   "version": "1.0.0",
-  "description": "A team profile generator with test cases",
+  "description": "",
   "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "tests"
-  },
   "scripts": {
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Godoflaugh/Team-Profile-Generator.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Godoflaugh/Team-Profile-Generator/issues"
-  },
-  "homepage": "https://github.com/Godoflaugh/Team-Profile-Generator#readme",
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "inquirer": "^6.5.2"
   },
   "devDependencies": {
-    "jest": "^28.1.1"
-  }
+    "jest": "^24.9.0"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GregPetropoulos/Team-Profile-Generator.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/GregPetropoulos/Team-Profile-Generator/issues"
+  },
+  "homepage": "https://github.com/GregPetropoulos/Team-Profile-Generator#readme"
 }
